################################################################################
## 'TAQMNGR' package
################################################################################

Maintained by Francesco Calvori (francesco.calvori@gmail.com).

--------------------------------------------------------------------------------
ChangeLog:
* 2014-01-13: Initial release of package (TAQMNGR-2014.01-1).
