@@ -1,18 +1,18 @@
 Package: TAQMNGR
-Version: 2014.01-1
-Date: 2014.01.13
+Version: 2014.01-2
+Date: 2014.01.28
 Title: Manage tick-by-tick transaction data
 Author: Francesco Calvori, Fabrizio Cipollini, Giampiero M. Gallo
 Maintainer: Francesco Calvori <francesco.calvori@gmail.com>
 Depends: R (>= 3.0-0)
 LinkingTo: Rcpp
 Suggests:
-Description: The package manages tick-by-tick transaction data, performing 'cleaning', 'aggregation' and 'import' in an efficient and fast way (the package engine is developed in C++).
-  Cleaning and Aggregation are performed according to Brownlees and Gallo (2006). Currently, the package processes raw data from WRDS (Wharton Research Data Service).
+Description: TAQMNGR manages tick-by-tick transaction data, performing 'cleaning', 'aggregation' and 'import' in an efficient and fast way (the package engine is developed in C++).
+  Cleaning and Aggregation are performed according to Brownlees and Gallo (2006). Currently, TAQMNGR processes raw data from WRDS (Wharton Research Data Service).
 License: GPL (>= 2)
-URL: http://www.r-project.org, character(0)
+URL: http://www.r-project.org
 BugReports:
-Packaged: 2014-01-15 15:26:09 UTC; Giampiero
+Packaged: 2014-01-28 16:00:45 UTC; giampiero
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-01-15 17:39:30
+Date/Publication: 2014-01-28 19:32:05
